Partial Hydration Implementation - Part 1

--- a/03-mini-island/demos/initial.html
+++ b/03-mini-island/demos/initial.html
@@ -11,9 +11,9 @@
   <body>
     <h1>Initial island demo</h1>
 
-    <mini-island>
+    <mini-island client:visible>
       <p>Hello future island</p>
-      <template>
+      <template data-island>
         <script type="module">
           console.log('THIS IS A WARNING FROM AN ISLAND')
         </script>
