DONE Partial Hydration Implementation - Part 1

--- a/03-mini-island/demos/initial.html
+++ b/03-mini-island/demos/initial.html
@@ -11,8 +11,10 @@
   <body>
     <h1>Initial island demo</h1>
 
+    <p style="padding-bottom: 100vh">Scroll down:</p>
+
     <mini-island client:visible>
-      <p>Hello future island</p>
+      <p>This is the island</p>
       <template data-island>
         <script type="module">
           console.log('THIS IS A WARNING FROM AN ISLAND')
