Clientmedia Lazy Hydration Implementation2

--- a/03-mini-island/demos/initial.html
+++ b/03-mini-island/demos/initial.html
@@ -13,7 +13,8 @@
 
     <p style="padding-bottom: 100vh">Scroll down:</p>
 
-    <mini-island client:visible>
+    <!-- <mini-island client:visible> -->
+    <mini-island client:media="(max-wdith: 400px)">
       <p>This is the island</p>
       <template data-island>
         <script type="module">
